Set up oauth for custom registration and google login (#21)
* auth changes

* oauth setup for google and custom login

* cleanup

* cleanup

* sign up added

* show solid errors and cleanup

* Update login-buttons style in signin-page

* Apply anchor-style in signin and signup links

* Enable submitting login form by pressing enter

* cleanup

Co-authored-by: Anna Christaki <annachristaki@think-code.io>
Co-authored-by: Spyros Bekiaris <spirosbekos@gmail.com>

--- a/src/static/dist-popup/popup.html
+++ b/src/static/dist-popup/popup.html
@@ -608,10 +608,10 @@ class IdpCallback extends react__WEBPACK_IMPORTED_MODULE_1__["Component"] {
   }
 
   render() {
-    const message = this.state.loggedIn ? 'Logged in!' : 'Logging in…';
-    return /*#__PURE__*/react__WEBPACK_IMPORTED_MODULE_1__["default"].createElement("h1", {
+    /*const message = this.state.loggedIn ? 'Logged in!' : 'Logging in…';
+    return react__WEBPACK_IMPORTED_MODULE_1__["default"].createElement("h1", {
       class: "center"
-    }, message);
+    }, message);*/
   }
 
 }
